--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>be.abis</groupId>
     <artifactId>ExA1</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>ExA3</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -15,7 +18,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
     <build>
         <plugins>
             <plugin>
